# psg-hub

./: .gitignore  .gitleaksignore  .gitmodules  .mcp.json  .npmrc  .vercelignore  CONTRIBUTING.md  PLANNING.md  README.md  Reference.md  node_modules  package.json  pnpm-lock.yaml  turbo.json
apps/psg-ads-mutations/: .env.example  .gitignore  CLAUDE.md  README.md  SESSION_HANDOFF.md  process-model-psg-delivery-lifecycle.html  process-model-psg-sales-lifecycle.html  pyproject.toml  runner.py
apps/psg-ads-mutations/audits/: PSG-AGGREGATE-REPORT.md
apps/psg-ads-mutations/audits/flower-hill/: GOOGLE-ADS-REPORT.md
apps/psg-ads-mutations/audits/tedesco/: GOOGLE-ADS-REPORT.md  POST-PHASE1-PULL-SPEC.md
apps/psg-ads-mutations/audits/wallace/: GOOGLE-ADS-REPORT-2026-05-27.html  GOOGLE-ADS-REPORT-2026-05-27.md  GOOGLE-ADS-REPORT.md
apps/psg-ads-mutations/googleads_psg/: __init__.py  audit_log.py  auth_bootstrap.py  client.py
apps/psg-ads-mutations/googleads_psg/mutations/: assets.py  campaign_bidding.py  campaign_device_bids.py  campaign_network.py  conversion_actions.py  customer_conversion_goals.py  geo_targets.py  negative_keywords.py
apps/psg-ads-mutations/gtm_psg/: __init__.py  audit_log.py  auth_bootstrap.py  client.py
apps/psg-ads-mutations/gtm_psg/mutations/: tags.py
apps/psg-ads-mutations/ops/flower-hill/: ADS-STRATEGY.md  ASSETS-CATALOG.md  BUDGET-PLAN.md  CAMPAIGN-ARCHITECTURE.md  CLIENT-BRIEF.md  CREATIVE-BRIEF.md  DEMOGRAPHIC-PROFILE.md  (+7 more)
apps/psg-ads-mutations/psg-ads/: Wallace Collision — Status Report.md
apps/psg-ads-mutations/tests/: test_runner.py
(+1942 files in other folders)
